--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
     <RelativeLayout
         android:id="@+id/layout_info_weather"
-        android:visibility="gone"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -157,7 +157,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/text_view_forecast"
+            android:id="@+id/text_view_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -170,7 +170,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text_view_forecast"
+            android:layout_below="@+id/text_view_main"
             android:weightSum="3"
             android:layout_marginTop="30dp"
             android:orientation="horizontal">
