--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
     <RelativeLayout
         android:id="@+id/layout_info_weather"
-
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -61,7 +61,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:textStyle="bold"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="140dp"
             android:text="Cidade"
             android:scaleType="fitXY"
             android:layout_centerHorizontal="true"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/image_view_icon"
             android:weightSum="3"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -116,7 +116,7 @@
                     android:layout_height="wrap_content"
                     android:text="25°"
                     android:textStyle="bold"
-                    android:textSize="50sp"
+                    android:textSize="45sp"
                     android:layout_gravity="center" />
 
 <!--                <TextView-->
@@ -162,7 +162,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="24sp"
-            android:layout_marginTop="380dp"
+            android:layout_marginTop="340dp"
             android:text="Ensolarado"
             android:layout_centerHorizontal="true" />
 
@@ -215,7 +215,7 @@
                     android:layout_gravity="center" />
 
                 <TextView
-                    android:id="@+id/text_view_sunset"
+                    android:id="@+id/text_view_sunrise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="5:15"
@@ -240,7 +240,7 @@
                     android:layout_gravity="center" />
 
                 <TextView
-                    android:id="@+id/text_view_sunrise"
+                    android:id="@+id/text_view_sunset"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="17:45"
