--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,14 @@
         android:layout_marginRight="24dp"
         android:text="@string/search" />
 
+    <ImageView
+        android:id="@+id/image_view_center_icon"
+        android:layout_width="240dp"
+        android:layout_height="220dp"
+        android:layout_centerInParent="true"
+        android:gravity="center_vertical"
+        android:src="@drawable/weather" />
+
     <RelativeLayout
         android:id="@+id/layout_info_weather"
         android:visibility="gone"
